samples/e.fenek
fun main() -> i8 {
  let n: *i8 = null;
  // error
  ret *n;
}
